<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/text_pos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_hydrant_loc"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/text_lat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_hydrant_lat"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/edittext_lat"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:ems="10"
            android:enabled="false" />

        <TextView
            android:id="@+id/text_lon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_hydrant_lon"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/edittext_lon"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:ems="10"
            android:enabled="false" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/button_showlocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_hydrant_show_location" />

            <Button
                android:id="@+id/button_updatelocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_hydrant_update_location" />

        </LinearLayout>

        <TextView
            android:id="@+id/text_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_hydrant_type"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spinner_hydrant_type"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/text_optional"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_optional"
            android:text="@string/optional"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_hydrant_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/edittext_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:singleLine="true" >

            <requestFocus />

        </EditText>

        <TextView
            android:id="@+id/text_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_hydrant_position"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spinner_hydrant_position"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/text_diameter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_hydrant_diameter"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/edittext_diameter"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:singleLine="true" />

        <TextView
            android:id="@+id/text_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_hydrant_count"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/edittext_count"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:singleLine="true" />

        <TextView
            android:id="@+id/text_reservoir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_hydrant_reservoir"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/edittext_reservoir"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:singleLine="true" />

        <TextView
            android:id="@+id/text_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_hydrant_pressure"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/edittext_pressure"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:singleLine="true" />
    </LinearLayout>

</ScrollView>