<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/text_type_l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_hydrant_type"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/text_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/text_name_l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_hydrant_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/text_position_l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_hydrant_position"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/text_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/text_diameter_l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_hydrant_diameter"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/text_diameter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/text_count_l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_hydrant_count"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/text_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/text_reservoir_l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_hydrant_reservoir"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/text_reservoir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/text_pressure_l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_hydrant_pressure"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/text_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

    </LinearLayout>

</ScrollView>